[package]
name = "blink"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
cortex-m-semihosting = "0.5.0"
heapless = "0.8.0"
lis3dh = "0.4.3"
panic-semihosting = "0.6.0"
stm32h7xx-hal = { version = "0.16.0", features = ["stm32h750v","usb_hs"] }
usb-device = "0.3.2"
usbd-serial = "0.2.2"

[[bin]]
name = "blink"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors
